[package]
author = "youngbloood"
name = "leetcode-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree = {path = "./tree"}
array = {path = "./array"}
linklist = {path = "./linklist"}
assert = {path = "./assert"}